Silence QueryRunner startup logs in tests